--- a/Framework/~Process.xaml
+++ b/Framework/~Process.xaml
@@ -106,7 +106,7 @@
     <ui:Comment DisplayName="Comment (placeholder)" sap:VirtualizedContainerService.HintSize="912.666666666667,55.3333333333333" sap2010:WorkflowViewState.IdRef="Comment_1" Text="//  Invoke steps of the process" />
     <TryCatch DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="912.666666666667,2852" sap2010:WorkflowViewState.IdRef="TryCatch_1">
       <TryCatch.Try>
-        <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Chrome" DisplayName="Attach Browser 'chrome.exe Your'" sap:VirtualizedContainerService.HintSize="874,2637.33333333333" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="aeb1567fe435f0248b07444a76c3b4cd" Selector="&lt;html app='chrome.exe' title='Your work - JIRA' url='https://griffinsolutionsgroup.atlassian.net/jira/your-work' /&gt;">
+        <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Chrome" DisplayName="Attach Browser 'chrome.exe Your'" sap:VirtualizedContainerService.HintSize="874,2637.33333333333" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="4800fa92cfda4a173863b978e04b4e22" Selector="&lt;html app='chrome.exe' title='Your work - JIRA' /&gt;">
           <ui:BrowserScope.Body>
             <ActivityAction x:TypeArguments="x:Object">
               <ActivityAction.Argument>
